[gd_scene load_steps=14 format=3 uid="uid://cdtke5nnnc1p"]

[ext_resource type="Script" path="res://element/enemy/greenpepper.gd" id="1_fafx1"]
[ext_resource type="Texture2D" uid="uid://b3feo1iilxyfi" path="res://assets/greenpepper.png" id="2_mtas1"]
[ext_resource type="Texture2D" uid="uid://bwrod5gm0s857" path="res://assets/enemy_burst.png" id="3_h23ug"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i04wv"]
atlas = ExtResource("2_mtas1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nqh34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i04wv")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ej2hk"]
radius = 22.561

[sub_resource type="AtlasTexture" id="AtlasTexture_778w4"]
atlas = ExtResource("3_h23ug")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_geu4n"]
atlas = ExtResource("3_h23ug")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hah17"]
atlas = ExtResource("3_h23ug")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sechb"]
atlas = ExtResource("3_h23ug")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkucb"]
atlas = ExtResource("3_h23ug")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g00ff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_778w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geu4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hah17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sechb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkucb")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dxtn0"]
radius = 202.01

[node name="greenpepper" type="Area2D"]
collision_layer = 16
collision_mask = 4
script = ExtResource("1_fafx1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_nqh34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ej2hk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimatedBurst" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_g00ff")

[node name="MonitorArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="MonitorArea"]
shape = SubResource("CircleShape2D_dxtn0")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimatedBurst" to="." method="_on_burst_animation_finished"]
[connection signal="area_entered" from="MonitorArea" to="." method="_on_monitor_area_entered"]
[connection signal="area_exited" from="MonitorArea" to="." method="_on_monitor_area_exited"]
